@startuml Roles

left to right direction

abstract class Persona <<Model>> {
    - nombreCompleto: String
    - cedula: String
    - fechaDeNacimiento: Fecha
    - estadoCivil: EstadoCivil
    - instruccion: NivelDeEducacion
    - direccion: Direccion
    - telefono: NumeroDeTelefono
    - correo: Correo
    - foto: Foto
}

class Rol <<RoleFilter>>{
    - id_rol
    + get_allowed_actions()
    + get_allowed_actions()
    + get_serializer_class()
    + get_serializer()
}

Administrador -up-|> Rol
Manager -up-|> Rol
Empleado -up-|> Rol

Persona *--> "1" Rol

class Trabajador {

}

class Encargado {
    - ruc
}

Trabajador --|> Persona
Encargado --|> Persona

class Empresa {
    - nombre_comercial: CharField
    - ruc: CharField
    - representante_legal: OneToOneField
    - direccion: CharField
    - correo: EmailField
    - telefono: CharField
    + __str__(): str
}

Empresa o--> "*" Encargado
Empresa o--> "*" Trabajador

@enduml